--- a/eugene/doc/Doc_Homology.tex
+++ b/eugene/doc/Doc_Homology.tex
@@ -1,6 +1,6 @@
 % Documentation of the Homology sensor
 
-\subsection{\texttt{Sensor.Homology}}
+\subsubsection{\texttt{Sensor.Homology}}
 
 Todo.
 
