--- a/eugene/doc/Doc_PatConst.tex
+++ b/eugene/doc/Doc_PatConst.tex
@@ -1,6 +1,6 @@
 % Documentation of the PatConst sensor
 
-\subsection{\texttt{Sensor.PatConst}}
+\subsubsection{\texttt{Sensor.PatConst}}
 
 \paragraph{Description}
 
@@ -35,14 +35,10 @@ Sensor.PatConst         1        # Sensor priority
 
 No file input.
 
-\paragraph{Filtering input information}
-
-No filtering.
-
 \paragraph{Integration of information}
 
 All predictions that use a predicted signal receive the
-corresponding \texttt{PatConst.patP*[i]} penalty while those that go through
+corresponding \texttt{PatConst\-.patP*[i]} penalty while those that go through
 a predicted splice site while they could have used it receive a
 \texttt{PatConst.patPNo*[i]} penalty.
 
