--- a/eugene/doc/Doc_Plotter.tex
+++ b/eugene/doc/Doc_Plotter.tex
@@ -1,6 +1,6 @@
  Documentation of the Plotter sensor
 
-\subsection{\texttt{Sensor.Plotter}}
+\subsubsection{\texttt{Sensor.Plotter}}
 
 \paragraph{Description}
 
@@ -16,16 +16,12 @@ Plotter.GC          1         #
 Plotter.GC3         1         # 0 -> no plot  -  1 -> plot
 Plotter.A|T/A+T     1         #
 Sensor.Plotter.use  TRUE      # Use GFF sensor
-Sensor.Plotter      11        # Sensor priority
+Sensor.Plotter      1         # Sensor priority
 \end{Verbatim}
 
 \paragraph{Input files format}
 
 No input files  needed.
-
-\paragraph{Filtering input information}
-
-No filtering.
 
 \paragraph{Integration of information}
 
