--- a/eugene/doc/Doc_SMachine.tex
+++ b/eugene/doc/Doc_SMachine.tex
@@ -1,6 +1,6 @@
 % Documentation of the SMachine sensor
 
-\subsection{\texttt{Sensor.SMachine}}
+\subsubsection{\texttt{Sensor.SMachine}}
 
 \paragraph{Description}
 
