--- a/eugene/doc/Doc_Est.tex
+++ b/eugene/doc/Doc_Est.tex
@@ -1,6 +1,6 @@
 % Documentation of the Est sensor
 
-\subsection{\texttt{Sensor.Est}}
+\subsubsection{\texttt{Sensor.Est}}
 \label{plugest}
 
 \paragraph{Description}
@@ -16,7 +16,7 @@ adequate format (see below).
 
 The sensor is activated by either:
 \begin{itemize}
-\item the \texttt{-d} argument \index{CmdFlags}{[EST/cDNA activation]
+\item the \texttt{-d} argument \index{CmdFlags}{[EST activation]
     d}.
 \item the value TRUE for the parameter \texttt{Sensor.Est.use} in
   the parameter file.
@@ -24,13 +24,13 @@ The sensor is activated by either:
 
 The behavior of the plugin is controlled by 4 parameters:
 \begin{itemize}
-\item \texttt{Est.estP} indicates the penalty for violating a transcribed
+\item \texttt{Est.est*P} indicates the penalty for violating a transcribed
   evidence
 \item \texttt{Est.estM} gives the amount of ``fuzzyness'' allowed in
   interpreting a hit/gap border. The nucleotides which are less than
   \texttt{Est.estM} nucleotides away from this border are considered
   as neither in a hit or a gap.
-\item \texttt{Est.utrP} is a penalty introduced to try to limit the
+\item \texttt{Est.utrP*} is a penalty introduced to try to limit the
   extension of UTR beyond the frontier of transcribed evidence when
   there is some. For a defined length, the adequate UTR states that
   precede or follow an uninterrupted stretch of transcribed evidence
@@ -38,7 +38,7 @@ The behavior of the plugin is controlled by 4 parameters:
 \item \texttt{Est.utrM} gives the number of UTR nucleotides that will
   be penalized using the previous penalty on the border of transcribed
   evidence.
-\item \texttt{Est.StrongDonor} gives a threshold $T$ on donor strength
+\item \texttt{Est.StrongDonor*} gives a threshold $T$ on donor strength
   inside intronless EST. If a given Donor with scores $a|b$ such that
   $\log(\frac{a}{b}) >T$ then the intronless EST is rejected because
   it goes through a very strong donor site.
@@ -49,17 +49,22 @@ and activated either by the \texttt{-E} argument or by setting the value
 TRUE for the parameter \texttt{Sensor.Est.PostProcess} in the parameter
 file.
 
+The \texttt{Sensor.Est} is loaded last because it has the highest priority.
+This is important since the sensor actually uses the information
+provided by other sensors (splice site prediction sensors) that then have to be loaded before.
+
 Here is an example of Est parameters definition.
 \begin{Verbatim}[fontsize=\small]
-Sensor.Est.use   TRUE     # Use EST sensor
-Sensor.Est       2        # Sensor priority
 Est.PostProcess  FALSE    # Don't postprocess
 Est.estP*        -0.4
 Est.estM         6
 Est.utrP*        0.35
 Est.utrM         5
 Est.StrongDonor* 0.95
+Sensor.Est.use   TRUE     # Use EST sensor
+Sensor.Est       20       # Sensor priority: the highest one
 \end{Verbatim}
+
 
 \paragraph{Input files format}
 
@@ -71,7 +76,7 @@ per ligne:
 where:
 \begin{itemize}
 \item $b^S$ and $e^S$ are the begin and the end of the similarity S on the genomic sequence,
-\item \item $s^S$ is the score of the similarity S (number of identical bases)
+\item $s^S$ is the score of the similarity S (number of identical bases)
 \item $x$ is unused for now
 \item $b^S$ is the strand where the similarity occurs (forward = 0,
   reverse = 1). This information is not used anymore by the plugin
@@ -80,7 +85,7 @@ where:
 \item \texttt{<est name>} is the name of the EST/cDNA sequence. Each
   sequence MUST have a unique name.
 \item <$bq^S$> <$eq^S$> are the begin and the end of the similarity S
-  on the query (EST/cDNA) sequence..
+  on the query (EST/cDNA) sequence.
 \end{itemize}
 The lines in the file must be ordered by sequence name first (all the
 hits of a given EST are put together) and by increasing
@@ -112,7 +117,7 @@ increasing \texttt{<$bq^S$> <$eq^S$> }. In practice, this file can be
 directly constructed from an EST/cDNA bank and the sequence using a
 modified version of \texttt{sim4}. This version outputs splices
 alignements in the correct format (using the flag \texttt{A=6}) and
-only outputs hits with a voverage of more than 80\%\ and with a
+only outputs hits with a coverage of more than 80\%\ and with a
 similarity either than 90\%.
 
 A patch file \texttt{sim4.patch} is available in the plugin source
@@ -124,8 +129,8 @@ useless on recent sim4 versions.
 
 The EST information goes through a complex filtering process. First
 all hits are loaded. Successive hits of a same sequence are considered
-as a single alignment.  For every spliced alignement, the plugins
-checks is a splice site of the correct type as been predicted near the
+as a single alignment.  For every spliced alignement, the plugin
+checks if a splice site of the correct type as been predicted near the
 border of each gap (less than \texttt{Est.estM} bases aways of the
 border). This is checked on each strand. If a strand does not contain
 the necessary splice sites, then it is considered as impossible. If
@@ -142,7 +147,7 @@ exon, while a previous sequence indicates that the nucleotide is part
 of an exon (resp. intron) is discarded (filtered).
 
 Any unspliced sequence that crosses a donor site that is predicted
-with a sufficiently strong confidence (See \texttt{Est.StrongDonor})
+with a sufficiently strong confidence (See \texttt{Est.StrongDonor*})
 is filtered out.
 
 \paragraph{Integration of information}
@@ -152,7 +157,7 @@ nucleotide can either be located:
 \begin{description}
 \item[Hit] inside a matching segment that can occur on the forward strand
   on the reverse strand or both (as identified during filtering).
-\item[Gap] or inside a gap segment that can occur on on the forward strand
+\item[Gap] or inside a gap segment that can occur on the forward strand
   on the reverse strand or both (as identified during filtering).
 \item[None] or otherwise outside of any existing hit or gap (or less
   than \texttt{Est.estM} bases aways of the border of such a segment)
@@ -160,14 +165,14 @@ nucleotide can either be located:
 
 For a Hit: all intronic and intergenic tracks as well as UTR and
 exonic tracks on a strand incompatible with the hit are penalized with
-\texttt{Est.estP}.
+\texttt{Est.estP*}.
 
 For a Gap: all exonic and intergenic tracks as well as UTR and
 intronic tracks on a strand incompatible with the hit are penalized with
-\texttt{Est.estP}.
+\texttt{Est.estP*}.
 
 When no information exists (None), the UTR tracks are penalized by
-\texttt{Est.utrP} if and only if there is a Hit evidence at less than
+\texttt{Est.utrP*} if and only if there is a Hit evidence at less than
 \texttt{Est.utrM} bases away.
 
 \paragraph{Post analyse}
@@ -178,7 +183,7 @@ prediction is analyzed if the \texttt{-E} argument
 the \texttt{Est.PostProcess} parameter is set to \texttt{TRUE}.
 
 For each coding exon predicted, the percentage of nucleotides
-supported by a transcribed sequence is displayed This count includes
+supported by a transcribed sequence is displayed. This count includes
 all EST/cDNA, including those filtered.
 
 For each predicted transcript (from 5'UTR to 3'UTR), each available
@@ -195,7 +200,7 @@ prediction. The transcribed sequence is then  classified as:
 \item Support (if it is otherwise consistent with the prediction)
 \end{itemize}
 
-Finally, for each predicted transcript (from 5'UTR to 3'UTR) nad
+Finally, for each predicted transcript (from 5'UTR to 3'UTR) and
 predicted CDS (from start to stop), the number of predicted
 nucleotides that are supported by existing transcripts (filtered or
 not) is reported.
