--- a/eugene/doc/Doc_GSplicer.tex
+++ b/eugene/doc/Doc_GSplicer.tex
@@ -1,30 +1,30 @@
 % Documentation of the GSplicer sensor
 
-\subsection{\texttt{Sensor.GSplicer}}
+\subsubsection{\texttt{Sensor.GSplicer}}
 
 \paragraph{Description}
 
 The GSplicer sensor injects possible splice sites as predicted by the
-\textsc{GeneSplicer} program. The plugin reads the prediction of the
+GeneSplicer program. The plugin reads the prediction of the
 program from one file whose name is derived from the sequence name by
-adding the \texttt{.Gsplicer} suffix. This file describe the predicted
+adding the \texttt{.Gsplicer} suffix. This file describes the predicted
 splice sites for the forward and reverse strand.  The sensor is
 activated by the value TRUE for the parameter
 \texttt{Sensor.GSplicer.use} in the parameter file.  Here is an
 example of GSplicer parameters definition :
 \begin{Verbatim}[fontsize=\small]
-Sensor.GSplicer.use  TRUE   # Use GSplicer sensor
-Sensor.GSplicer      1      # Sensor priority
-GSplicer.coefAcc*    ?      #
-GSplicer.penAcc*     ?      # GSplicer parameters (rescaling)
-GSplicer.coefDon*    ?      # See the Integration of
-GSplicer.penDon*     ?      # information section.
+GSplicer.coefAcc*    0.8300      #
+GSplicer.penAcc*     7.7000      # GSplicer parameters (rescaling)
+GSplicer.coefDon*    1.3153      # See the Integration of
+GSplicer.penDon*     10.1600     # information section.
+Sensor.GSplicer.use  TRUE        # Use GSplicer sensor
+Sensor.GSplicer      1           # Sensor priority
 \end{Verbatim}
 
 \paragraph{Input files format}
 
 The files \texttt{.Gsplicer} describe the predicted splice sites
-sorted by position on the sequence (as given by \textsc{GeneSplicer}).
+sorted by position on the sequence (as given by GeneSplicer).
 The format of a line is : \texttt{<End5> <End3> <Score> <confidence>
   <splice\_site\_type>}
 
@@ -45,14 +45,14 @@ Here is an extract from \texttt{SYNO\_ARATH.fasta.Gsplicer} :
 [...]
 \end{Verbatim}
 
-These files can be obtained by launching the \textsc{GeneSplicer} software
+These files can be obtained by launching the GeneSplicer software
 available at:
 \begin{itemize}
 \item  web site : \texttt{http://www.tigr.org/tdb/GeneSplicer/index.shtml}.
 \item  ftp serveur : \texttt{ftp://ftp.tigr.org/pub/software/GeneSplicer}.
 \end{itemize}
 
-\textsc{GeneSplicer} is launched with the command:
+GeneSplicer is launched with the command:
 \begin{Verbatim}[fontsize=\small]
 genesplicer SEQ_FASTA GENOME_TRAINING_DIRECTORY [options] > SEQ_FASTA.Gsplicer
 \end{Verbatim}
@@ -73,7 +73,7 @@ No filter.
 The procedure consists in weigthing the graph used by \EuGene. For
 each predicted site the edge corresponding to the good transition is
 weighted by: $(s_i * coef) - pen$.  Where $s_i$ is the score given by
-\textsc{GeneSplicer}, $coef$ and $pen$ are given in the parameter
+GeneSplicer, $coef$ and $pen$ are given in the parameter
 file.
 
 \shrink{
@@ -90,7 +90,7 @@ A set of 8 vectors is used. The vectors are:
 \end{itemize}
 
 For each position if one of the 4 ``position vectors'' contains the
-query position :
+query position:
 \begin{itemize}
 \item for forward and reverse acceptor sites : $(vValAcc * coefAcc) -
   penAcc$ is added to the corresponding transition (intron track to exon
