--- a/eugene/doc/Doc_IfElse.tex
+++ b/eugene/doc/Doc_IfElse.tex
@@ -1,11 +1,11 @@
 % Documentation of the IfElse sensor
 
-\subsection{\texttt{Sensor.IfElse}}
+\subsubsection{\texttt{Sensor.IfElse}}
 
 \paragraph{Description}
 
 This plugin is used to combine the predictions of two existing
-plugins. It listen to a first plugin. For each possible predictable
+plugins. It listens to a first plugin. For each possible predictable
 item, if this plugin predicts something then this prediction is used.
 If the plugin does not predict anything, then the output of the second
 plugin is used.
@@ -17,7 +17,7 @@ loaded with an instance number equal to one plus the instance number
 of the IfElse sensor itself (allowing for nested IfElse).
 
 Here is an example of IfElse parameters definition which uses the NG2
-Sensor if it predicts something or else the SplicePredictor Sensor.
+Sensor if it predicts something or else the SPred sensor.
 \begin{Verbatim}[fontsize=\small]
 IfElse.SensorIf         NG2
 IfElse.SensorElse       SPred
@@ -26,7 +26,7 @@ Sensor.IfElse           1       # Sensor priority
 \end{Verbatim}
 
 In this case, since the IfElse is loaded as a first plugin (instance
-0), the two slave plugins will be instaciated as instance number
+0), the two slave plugins will be instanciated as instance number
 one. The parameters for the 2 plugins must therefore be suffixed by
 \texttt{[1]}.
 
