--- a/eugene/doc/Doc_MarkovProt.tex
+++ b/eugene/doc/Doc_MarkovProt.tex
@@ -1,6 +1,6 @@
 % Documentation of the MarkovProt sensor
 
-\subsection{\texttt{Sensor.MarkovProt}}
+\subsubsection{\texttt{Sensor.MarkovProt}}
 
 \paragraph{Description}
 
@@ -18,8 +18,14 @@ the GC scope of the matrices. If the GC\% of the sequence is out of
 the scope, the plugin will give an equal null loglikelihood to all types
 of regions.
 
-The sensor is activated by setting the value TRUE for the parameter
-\texttt{Sensor.MarkovProt.use} in the parameter file.
+
+The sensor is activated by either:
+\begin{itemize}
+\item the \texttt{-M} argument followed by the filename of the set of models.
+  \index{CmdFlags}{[MarkovProt Markov matrix file] M}
+\item the value TRUE for the parameter \texttt{[Sensor.MarkovProt.use} in
+  the parameter file.
+\end{itemize}
 
 Here is an example of MarkovProt parameters definition.
 \begin{Verbatim}[fontsize=\small]
@@ -35,10 +41,6 @@ Sensor.MarkovProt       1       # Sensor priority
 \paragraph{Input files format}
 
 No input files  needed beyond the markov matrix files.
-
-\paragraph{Filtering input information}
-
-No filtering.
 
 \paragraph{Integration of information}
 
