--- a/eugene/doc/Doc_SPred.tex
+++ b/eugene/doc/Doc_SPred.tex
@@ -1,19 +1,19 @@
 % Documentation of the SPred sensor
 
-\subsection{\texttt{Sensor.SPred}}
+\subsubsection{\texttt{Sensor.SPred}}
 
 \paragraph{Description}
 
 This plugin injects possible splice sites as predicted by the
-\textsc{SplicePredictor} program. The plugin reads the prediction of
-the programs from two files whose names are derived from the sequence
-name by adding the \texttt{.spliceP} and \texttt{.splicePR} suffix
+SplicePredictor program. The plugin reads the prediction of
+the program from two files whose names are derived from the sequence
+name by adding the \texttt{.spliceP} and \texttt{.splicePR} suffixes
 (respectively prediction for the forward and reverse strand).
 
 The sensor is activated by setting the value TRUE for the parameter
 \texttt{Sensor.SPred.use} in the parameter file. The score for acceptor
-and donor prediction is rescaled by the parameters {\tt SPred.accP} and
-{\tt SPred.accB} for acceptors and {\tt SPred.donP} and {\tt SPred.donB} for
+and donor prediction is rescaled by the parameters {\tt SPred.accP*} and
+{\tt SPred.accB*} for acceptors and {\tt SPred.donP*} and {\tt SPred.donB*} for
 donors (see below).
 
 Here is an example of SPred parameters definition.
@@ -29,7 +29,8 @@ Sensor.SPred       1      # Sensor priority
 \paragraph{Input files format}
 
 The files with \texttt{.spliceP} and \texttt{.splicePR} suffix are
-obtained by running \textsc{SplicePredictor}.
+obtained by running SplicePredictor which can be obtained at
+\texttt{http://bioinformatics.iastate.edu/cgi-bin/sp.cgi}.
 
 Here is an extract from \texttt{SYNO\_ARATH.fasta.spliceP}:
 \begin{Verbatim}[fontsize=\small]
@@ -59,10 +60,10 @@ No filtering.
 
 \paragraph{Integration of information}
 
-One of the \textsc{SplicePredictor} scores $s$ for a given position is
+One of the SplicePredictor scores $s$ for a given position is
 rescaled using the $\log(\alpha.s^\beta)$ function. The four parameters
-\texttt{SPred.accP}, \texttt{SPred.accB}, \texttt{SPred.donP},
-\texttt{SPred.donB} indicates the values of these $\alpha$ and $\beta$
+\texttt{SPred.accP*}, \texttt{SPred.accB*}, \texttt{SPred.donP*},
+\texttt{SPred.donB*} indicates the values of these $\alpha$ and $\beta$
 parameters for acceptor sites and donor sites respectively.  These
 parameters have been estimated on existing data.
 
