--- a/eugene/doc/Doc_StartWAM.tex
+++ b/eugene/doc/Doc_StartWAM.tex
@@ -1,6 +1,6 @@
 % Documentation of the StartWAM sensor
 
-\subsection{\texttt{Sensor.StartWAM}}
+\subsubsection{\texttt{Sensor.StartWAM}}
 
 \paragraph{Description}
 
@@ -32,15 +32,15 @@ StartWAM.modelfilename     WAM/WAM.ARA.START  # base name of the model files
 StartWAM.NbNtBeforeATG     3                  # amount context
 StartWAM.NbNtAfterATG      3                  # aval context
 StartWAM.MarkovianOrder    1                  # order of the markovian models
-StartWAM.ScaleCoef*         0.1594             # scaling parameter
-StartWAM.ScalePenalty*      -3.1439            # scaling parameter
+StartWAM.ScaleCoef*        0.1594             # scaling parameter
+StartWAM.ScalePenalty*     -3.1439            # scaling parameter
 Sensor.StartWAM.use        TRUE               # Use StartWAM sensor
 Sensor.StartWAM            1                  # Sensor priority
 \end{Verbatim}
 
 \paragraph{Input files format}
 
-This StartWAM Sensor requires a true positive and a false positive
+This StartWAM sensor requires a true positive and a false positive
 model file per motif position. These files have to be present in the
 path given by \texttt{StartWAM.modelfilename} from the plugins
 directory (see \texttt{EuGene.PluginsDir} parameter). These models can
@@ -112,5 +112,5 @@ No Post-Analyse.
 
 Vertical blue lines (whose length is function of the score) are
 plotted on the corresponding frame for each start codon which score is
-higher than a defined treshold. This treshold is defined in the
+higher than a defined treshold. This threshold is defined in the
 \texttt{StartWAM.cc} file as -\texttt{PlotScoreIncrease}.
